--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@pixi/particle-emitter": "^5.0.2",
     "pixi.js": "^6.1.2"
   },
   "devDependencies": {
