--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@pixi/particle-emitter": "^5.0.2",
+    "phaser": "^3.55.2",
     "pixi.js": "^6.1.2"
   },
   "devDependencies": {
